--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/profilePic-noBackground.png" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "description" content="I am BrunoGG, a High School Student interested in technology, and 3D design. Explore my skills and some projects that I've made so far">
     <title>BrunoGG - Prathamesh Prabhakar</title>
   </head>
   <body>
