--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en" class = "scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/profilePic-noBackground.png" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/profilePic.png" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "description" content="I am BrunoGG, a High School Student interested in technology, and 3D design. Explore my skills and some projects that I've made so far">
     <title>BrunoGG - Prathamesh Prabhakar</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NLWF97CEFN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-NLWF97CEFN');
+    </script>
   </head>
   <body>
     <div id="root"></div>
